# marlowe

./: .env.example  .gitignore  ADMIN_GUIDE.md  CHANGELOG.md  DEVELOPER_GUIDE.md  Dockerfile.backend  Dockerfile.copilot-runtime  Dockerfile.frontend  KNOWLEDGE_GRAPH_FIX.md  LICENSE  PRD.md  README.md  TECHNICAL_BRIEF.md  TRADEMARK  docker-compose.yml  pyproject.toml
.cursor/rules/: observability.mdc
app/: __init__.py  cli.py  main.py
app/agents/: __init__.py  gap_analysis_graph.py  rag_agent.py
app/core/: config.py  database.py  security.py
app/data/: __init__.py  fedramp_baselines.json  fedramp_baselines.py
app/models/: __init__.py  assessment.py  evidence.py  faq.py  framework.py  gap_analysis_report.py  organization.py  requirement.py  user.py
app/schemas/: __init__.py  assessment.py  chat.py  evidence.py  faq.py  framework.py  graph.py  organization.py  requirement.py
app/services/: otel.py  (+23 more)
copilot-runtime/: package.json  server.js
database/: init.sql
docker/: nginx.conf
docs/: CONTRIBUTING.md  DEVELOPERS.md  PRD-Marlowe-Scaffold.md  PRE_PUSH_CHECKLIST.md  global-rules.md
frontend/: ai-knowledge-base.html  assessments.html  chat.html  controls.html  dashboard.html  documents.html  faq.html  help.html  index.html  knowledge-graph.html  menu.html  package-lock.json  package.json  register.html  reports.html  vite.config.ts
frontend-old/: assessments.html  chat.html  dashboard.html  faq.html  index.html  login.html  menu.html  reports.html
observability/: otel-collector.yaml  prometheus.yaml
scripts/: synth_fedramp_low.py  synth_taxonomy.py
(+63 files in other folders)
